# RPSLS_game

./: .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
services/game/: Dockerfile  entrypoint.sh
services/game-history/: Dockerfile  pyproject.toml
services/game-history/app/: __init__.py
services/game-logic/: Dockerfile  pyproject.toml
services/game-logic/app/: __init__.py  game.py  main.py
services/game-logic/tests/: test_game_logic.py
services/game/app/: __init__.py  main.py
services/game/app/api/: __init__.py
services/game/app/api/v1/: __init__.py
services/game/app/api/v1/endpoints/: __init__.py  choices.py  health.py  history.py  play.py
services/game/app/core/: __init__.py  config.py  logging.py  metrics.py  middleware.py
services/game/app/db/: __init__.py  database.py
services/game/app/models/: __init__.py  game.py
services/game/app/repositories/: __init__.py  game_repository.py
services/game/app/schemas/: __init__.py  game.py
services/game/app/services/: game_service.py
services/game/app/utils/: __init__.py  ai.py  enums.py  game_logic.py
services/game/migrations/: env.py
services/game/migrations/versions/: 20250704120000_initial_schema.py
services/game/tests/: __init__.py  test_ai.py  test_api.py  test_api_smart.py  test_config.py  test_database.py  test_game_logic.py  test_game_service.py
services/game_history/: pyproject.toml
services/game_history/app/: database.py  main.py  models.py  repository.py  service.py
services/game_history/tests/: conftest.py  test_api.py  test_models.py  test_repository.py  test_service.py
services/game_logic/: Dockerfile  pyproject.toml
services/game_logic/tests/: test_game_logic.py
services/matchmaking/: Dockerfile  pyproject.toml
services/matchmaking/app/: __init__.py
services/player-management/: Dockerfile  pyproject.toml
services/player_management/: pyproject.toml
services/player_management/app/: __init__.py
shared/: __init__.py  models.py  pyproject.toml
shared/tests/: __init__.py
