# RPSLS Game Service Configuration

[project]
name = "game"
version = "0.1.0"
description = "Async FastAPI micro-service that plays Rock-Paper-Scissors-Lizard-Spock and persists game history in PostgreSQL."
requires-python = ">=3.12"
# Core runtime dependencies
dependencies = [
    "fastapi~=0.110",
    "uvicorn[standard]~=0.29",
    "sqlalchemy[asyncio]~=2.0",
    "asyncpg~=0.29",
    "aiosqlite~=0.19",
    "alembic~=1.13",
    "pydantic~=2.6",
    "pydantic-settings~=2.2",
    "httpx~=0.27",
]

# Development dependencies
[dependency-groups]
dev = [
    "pytest~=8.4",
    "pytest-asyncio~=0.23",
    "ruff~=0.8",
    "mypy~=1.8",
]

# Ruff Configuration (replaces black, isort, flake8)
[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".bzr",
    ".direnv", 
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.ruff.lint.isort]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# MyPy Configuration
[tool.mypy]
python_version = "3.12"
strict = true  # Enables most strict checks in one setting
warn_return_any = true
disallow_untyped_defs = true

# Exclude test files from strict checking to keep the test code lightweight.
exclude = "services/game/tests/.*"

[[tool.mypy.overrides]]
module = ["asyncpg.*", "sqlalchemy.*"]
ignore_missing_imports = true

# Pytest Configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "services/game/tests"
]
asyncio_mode = "auto"
