[project]
name = "shared"
version = "0.1.0"
description = "Shared models and utilities for RPSLS microservices"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 