[project]
name = "game-logic-service"
version = "0.1.0"
description = "Stateless game logic service for Rock Paper Scissors Lizard Spock"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "shared",  # Workspace dependency
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"] 