[project]
name = "game_history"
version = "0.1.0"
description = "Game history service for RPSLS game"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "sqlalchemy>=2.0.41",
    "alembic>=1.16.2",
    "uvicorn>=0.35.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.17.0",  # For testing with SQLite
    "shared",  # Workspace dependency
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.28.0",  # Required by FastAPI TestClient
    "pytest-cov>=4.0.0",  # For coverage reporting
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]  # This tells Hatch where to find our package files

# Service-specific pytest settings that extend the global configuration
[tool.pytest.ini_options]
asyncio_mode = "auto"  # Enable async test support
testpaths = ["tests"]  # Look for tests in the service's tests directory
python_files = ["test_*.py"]  # Test file pattern
addopts = "-v --cov=app --cov-report=term-missing"  # Enable coverage reporting for this service 