[project]
name = "game-logic"
version = "0.1.0"
description = "Game logic microservice for Rock Paper Scissors Lizard Spock"
dependencies = [
    "fastapi>=0.110.0",
    "pydantic>=2.6.1",
    "uvicorn>=0.27.1",
    "shared",  # Local shared package
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",  # For TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"] 