[project]
name = "player-management"
version = "0.1.0"
description = "Player management service for RPSLS game"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
    "sqlalchemy>=2.0.41",
    "asyncpg>=0.30.0",
    "shared",  # Workspace dependency
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "alembic>=1.16.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"] 